# Laba_11

./: CMakeLists.txt  data.txt
src/: main.cpp
src/bin_tree/: bin_tree.hpp
src/data_check/: data_check.cpp  data_check.hpp
src/menu/: menu.cpp  menu.hpp
src/train/: train.cpp  train.hpp
